
// To compile and create test class:
// protoc --java_out=connector/proto/src/test/resources/protobuf/ connector/proto/src/test/resources/protobuf/message_with_enum.proto
// protoc --descriptor_set_out=connector/proto/src/test/resources/protobuf/message_with_enum.desc --java_out=connector/proto/src/test/resources/protobuf/org/apache/spark/sql/proto/ connector/proto/src/test/resources/protobuf/message_with_enum.proto

syntax = "proto3";

package org.apache.spark.sql.proto;
option java_outer_classname = "SimpleMessageEnumProtos";

enum BasicEnum {
    NOTHING = 0;
    FIRST = 1;
    SECOND = 2;
}

message SimpleMessageEnum {
    string key = 1;
    string value = 2;
    enum NestedEnum {
        ESTED_NOTHING = 0;
        NESTED_FIRST = 1;
        NESTED_SECOND = 2;
    }
    BasicEnum basic_enum = 3;
    NestedEnum nested_enum = 4;
}
