// To compile and create test class:
// protoc --java_out=connector/proto/src/test/resources/protobuf/ connector/proto/src/test/resources/protobuf/repeated_message.proto
// protoc --descriptor_set_out=connector/proto/src/test/resources/protobuf/repeated_message.desc --java_out=connector/proto/src/test/resources/protobuf/org/apache/spark/sql/proto/ connector/proto/src/test/resources/protobuf/repeated_message.proto

syntax = "proto3";

package org.apache.spark.sql.proto;
option java_outer_classname = "RepeatedMessageProtos";

message BasicMessage {
  int64 id = 1;
  string string_value = 2;
  int32 int32_value = 3;
  int64 int64_value = 4;
  double double_value = 5;
  float float_value = 6;
  bool bool_value = 7;
  bytes bytes_value = 8;
}
message RepeatedMessage {
  repeated BasicMessage basic_message = 1;
}
