// To compile and create test class:
// protoc --java_out=connector/proto/src/test/resources/protobuf/ connector/proto/src/test/resources/protobuf/simple_message.proto
// protoc --descriptor_set_out=connector/proto/src/test/resources/protobuf/simple_message.desc --java_out=connector/proto/src/test/resources/protobuf/org/apache/spark/sql/proto/ connector/proto/src/test/resources/protobuf/simple_message.proto

syntax = "proto3";

package org.apache.spark.sql.proto;
option java_outer_classname = "SimpleMessageProtos";

message SimpleMessage {
  int64 id = 1;
  string string_value = 2;
  int32 int32_value = 3;
  uint32 uint32_value = 4;
  int64 int64_value = 5;
  uint64 uint64_value = 6;
  double double_value = 7;
  float float_value = 8;
  bool bool_value = 9;
  bytes bytes_value = 10;
}
