/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
// To compile and create test class:
// protoc --java_out=connector/protobuf/src/test/resources/protobuf/ connector/protobuf/src/test/resources/protobuf/functions_suite_protobuf2.proto
// protoc --descriptor_set_out=connector/protobuf/src/test/resources/protobuf/functions_suite_protobuf2.desc --java_out=connector/protobuf/src/test/resources/protobuf/org/apache/spark/sql/protobuf/ connector/protobuf/src/test/resources/protobuf/functions_suite_protobuf2.proto

syntax = "proto2";

package org.apache.spark.sql.protobuf;
option java_outer_classname = "SimpleMessageProtos";

message required_optional_message {
  required string key = 1;
  required string value1 = 2;
  optional int32 value2 = 3;
}

enum EnumExample {
  ZERO = 0;
  FIRST = 1;
  SECOND = 2;
}

message default_message {
  required string key = 1 [default = "key1"];
  required string value1 = 2 [default = "value1"];
  optional int32 value2 = 3 [default = 123];
  required bool value3 = 4 [default = true];
}
